--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ dist: bionic
 language: php
 
 before_install:
-  - sudo apt-get -y install --no-install-recommends --assume-yes --quiet \
+  - sudo apt update && \
+    sudo apt -y install --no-install-recommends --assume-yes --quiet \
     libzip-dev \
     ca-certificates \
     curl \
