--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
+os: linux
 dist: bionic
 language: php
 
 before_install:
-  - sudo apt update && \
-    sudo apt -y install --no-install-recommends --assume-yes --quiet \
+  - sudo apt update && sudo apt -y install --no-install-recommends --assume-yes --quiet \
     libzip-dev \
     ca-certificates \
     curl \
