--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,6 @@ language: php
 
 before_install:
   - composer global require "fxp/composer-asset-plugin:~1.4.6"
-  - openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in travis-openssh-pk.enc -out /tmp/deploy_rsa -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 /tmp/deploy_rsa
-  - ssh-add /tmp/deploy_rsa
-  - ssh -o StrictHostKeyChecking=no -l "$SSH_USER" "$SSH_HOST"
 
 addons:
   apt:
@@ -21,6 +16,14 @@ script:
   - npm run build
   - rm -rf node_modules
   - npm i --production
+
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_99cde466f782_key -iv $encrypted_99cde466f782_iv -in travis-openssh-pk.enc -out travis-openssh-pk -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
+  - ssh -o StrictHostKeyChecking=no -l "$SSH_USER" "$SSH_HOST"
 
 deploy:
   - provider: script
