--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 
 
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_99cde466f782_key -iv $encrypted_99cde466f782_iv -in travis-openssh-pk.enc -out travis-openssh-pk -d
+  - openssl aes-256-cbc -K $encrypted_99cde466f782_key -iv $encrypted_99cde466f782_iv -in travis-openssh-pk.enc -out deploy_rsa -d
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
