--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ language: php
 before_install:
   - composer global require "fxp/composer-asset-plugin:~1.4.6"
 
-addons:
-  apt:
-    update: true
-
 script:
   - echo "Building"
   - composer install --no-dev --ignore-platform-reqs -o -q
@@ -19,7 +15,7 @@ script:
 
 
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_99cde466f782_key -iv $encrypted_99cde466f782_iv -in travis-openssh-pk.enc -out deploy_rsa -d
+  - openssl aes-256-cbc -K $encrypted_99cde466f782_key -iv $encrypted_99cde466f782_iv -in travis-openssh-pk.enc -out /tmp/deploy_rsa -d
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
