--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_deploy:
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
-  - ssh -o StrictHostKeyChecking=no -l "$SSH_USER" "$SSH_HOST"
+  - ssh -o StrictHostKeyChecking=no -l "$SSH_USER" "$SSH_HOST" exit
 
 deploy:
   - provider: script
